--- a/11.machine_learning(220830~220908)/project11_star/proj_namgwang.ipynb
+++ b/11.machine_learning(220830~220908)/project11_star/proj_namgwang.ipynb
@@ -15,9 +15,9 @@
     "|퀘이사(quasar)|블랙홀이 주변 물질을 집어삼키는 에너지에 의해 형성되는 거대 발광체|\n",
     "\n",
     "\n",
-    "<img src=\"sirius_star.webp\" alt=\"drawing\" width=\"200\"/>\n",
-    "<img src=\"galaxy.jpg\" alt=\"drawing\" width=\"240\"/>\n",
-    "<img src=\"quasar.jpg\" alt=\"drawing\" width=\"265\"/>\n"
+    "<img src=\"./image/sirius_star.webp\" alt=\"drawing\" width=\"200\"/>\n",
+    "<img src=\"./image/galaxy.jpg\" alt=\"drawing\" width=\"240\"/>\n",
+    "<img src=\"./image/quasar.jpg\" alt=\"drawing\" width=\"265\"/>\n"
    ]
   },
   {
@@ -3001,7 +3001,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.10 64-bit",
+   "display_name": "Python 3.10.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -3015,12 +3015,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cf92aa13fedf815d5c8dd192b8d835913fde3e8bc926b2a0ad6cc74ef2ba3ca2"
+    "hash": "701f553f3cf634fe4f2c4f983f7515070d2dd5af080cb3db5c1ee13f7b0211fa"
    }
   }
  },
