--- a/13~14(220922~221026)/project14_red_tide/modeling.ipynb
+++ b/13~14(220922~221026)/project14_red_tide/modeling.ipynb
@@ -11,6 +11,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 전처리 데이터 출처\n",
+    "- 적조 발생여부 \n",
+    "- 국립수산과학원(발생일, 발생해안, 적조생물, 개체수, 발생당시 수온)\n",
+    "[https://www.nifs.go.kr/rtm/TRS/gispop/redtide.jsp](https://www.nifs.go.kr/rtm/TRS/gispop/redtide.jsp) ('12~'22)\n",
+    "[https://www.nifs.go.kr/red/news_2.red](https://www.nifs.go.kr/red/news_2.red) (’81~’20)\n",
+    "- 생물밀도 \n",
+    "-  국립수산과학원(발생일, 발생해안, 적조생물, 개체수, 발생당시 수온)\n",
+    "[https://www.nifs.go.kr/rtm/TRS/gispop/redtide.jsp](https://www.nifs.go.kr/rtm/TRS/gispop/redtide.jsp) ('12~'22)\n",
+    "[https://www.nifs.go.kr/red/news_2.red](https://www.nifs.go.kr/red/news_2.red) (’81~’20)\n",
+    "- 수온 및 기온\n",
+    "- 국립수산과학원 < [관측정보검색<연안정지관측자료<해양관측자료<KODC (nifs.go.kr)](https://www.nifs.go.kr/kodc/coo_list_select.kodc)\n",
+    "- 기상청 < 기상자료개방포털 ([https://data.kma.go.kr/data/sea/selectBuoyRltmList.do?pgmNo=52](https://data.kma.go.kr/data/sea/selectBuoyRltmList.do?pgmNo=52))\n",
+    "- 강수량 \n",
+    "    - [기상자료개방포털[기후통계분석:기상현상일수:강수일수:기간조회] (kma.go.kr)](https://data.kma.go.kr/stcs/grnd/grndRnDay.do?pgmNo=156) (월별)\n",
+    "- 일조량 \n",
+    "- e 나라 지표 ([http://index.go.kr/potal/main/EachDtlPageDetail.do?idx_cd=1402](http://index.go.kr/potal/main/EachDtlPageDetail.do?idx_cd=1402))\n",
+    "- 운량(풍속)\n",
+    "- - 국립수산과학원 - 한국해양자료센터 (운량 6개월 분량) ([https://www.nifs.go.kr/kodc/coo_list_select.kodc](https://www.nifs.go.kr/kodc/coo_list_select.kodc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 데이터 샘플\n",
     "- 하루마다 데이터를 구해서 총 1달 기간의 수온, 기온, 강수량, 일조량, 풍속(독립변수 5개), 적조발생여부(종속변수)\n",
     "- 가상환경 : python 3.9.13\n",
