--- a/13~14(220922~221026)/220930/ex_konlpy.ipynb
+++ b/13~14(220922~221026)/220930/ex_konlpy.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# konlpy 관련 분석"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
