--- a/12.deep_learning(220909~220921)/220911/ex_char.ipynb
+++ b/12.deep_learning(220909~220921)/220911/ex_char.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### chap4. 데이터 표현과 특성 공학\n",
+    "# chap4. 데이터 표현과 특성 공학\n",
     "- 파이썬 라이브러리를 활용한 머신러닝 4장\n",
     "- 목차\n",
     "    - 범주형 변수\n",
@@ -1429,7 +1429,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1443,12 +1443,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "701f553f3cf634fe4f2c4f983f7515070d2dd5af080cb3db5c1ee13f7b0211fa"
+    "hash": "d417a21d97a2e6b8832d21dc44f5cbe4be6e18325f874a8bb8484565b928cd54"
    }
   }
  },
